stopped desktop share pop-up from showing on mobile screen size

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ main {
 }
 #container {
     display: flex;
+    flex-direction: row;
     width: 47rem;
     height: 18rem;
     border-radius: 0.5rem;
@@ -20,7 +21,6 @@ main {
     padding: 2rem;
     box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
     border-radius: 0 0.5rem 0.5rem 0;
-
 }
 
 .imgContainer img {
@@ -174,7 +174,8 @@ h1 {
         object-position: top;
         width: 100%;
         height: 100%;
+    } 
+    .profileInfoBlock {
+        
     }
-
-
   }
